# ToDoList

./: .gitignore  CMakeLists.txt  README.md
src/: Attività.cpp  Attività.h  main.cpp  todolist.cpp  todolist.h
tests/: test_attivita.cpp  test_todolist.cpp
